k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    type: backend
    app: myapp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      type: backend
      app: myapp
  template:
    metadata:
      name: node-app
      labels:
        type: backend
        app: myapp
    spec:
      containers:
        - name: node-app
          image: bhavesh9690/node-app
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
          ports:
            - containerPort: 3000
