k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    type: frontend
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      type: frontend
      app: myapp
  template:
    metadata:
      name: react-app
      labels:
        type: frontend
        app: myapp
    spec:
      containers:
        - name: react-app
          image: bhavesh9690/nagp-react
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
