k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: myapp
    type: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
  type: NodePort
