k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    type: frontend
    app: myapp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
