k8s/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 3000
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
